ecmascript/parser/tests/test262-error-references/fail/576b2243fb8c3b54.js.stderr
error: Expected RParen, got Some(Word(x))
 --> $DIR/tests/test262-parser/fail/576b2243fb8c3b54.js:1:13
  |
1 | ({ get prop(x) {} })
  |             ^

